# resume-builder

./: Dockerfile  README.md  cookies.json  main.py  pyproject.toml  requirements.txt  resume.aux  resume.out  resume.tex  template.tex  template_en.tex  template_projet.tex
automation/: freework.py  main.py  test_login.py
