[project]
name = "resume-builder"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam Mabrouk",email = "mabrouk.adam@outlook.com"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pylatex (>=1.4.2,<2.0.0)",
    "openai (>=1.72.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
